--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <p class="fade-in quote">- Transformando ideas en soluciones digitales</p>
 
                     <div class="btn-container">
-                        <button onclick="window.open('CV_2.pdf', '_blank')" class="btn-anim">Descargar CV</button>
+                        <button onclick="window.open('CV_JuanRiquett_ES.pdf', '_blank')" class="btn-anim">Descargar CV</button>
                     </div>
                     
                     <div class="info fade-in">
