--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     
                     <p>
                         <strong>LinkedIn:</strong>
-                        <a href="linkedin.com/in/juan-miguel-riquett-m-68a321366" target="_blank">JuanMiguelRm</a>
+                        <a href="https://www.linkedin.com/in/juan-miguel-riquett-m-68a321366" target="_blank">JuanMiguelRm</a>
                     </p>
                 </div>
     
